yaml/0.3.3/mailu/mailu/templates/front/deployment.yaml
---
# Source: mailu/templates/front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailu-front
  namespace: "mailu"
  labels:
    app.kubernetes.io/name: mailu
    helm.sh/chart: mailu-0.3.3
    app.kubernetes.io/instance: mailu
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: front
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: mailu
      app.kubernetes.io/instance: mailu
      app.kubernetes.io/component: front
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mailu
        helm.sh/chart: mailu-0.3.3
        app.kubernetes.io/instance: mailu
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: front
    spec:
      
      terminationGracePeriodSeconds: 2
      containers:
        - name: front
          image: mailu/nginx:master
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: certs
              mountPath: /certs
          ports:
            - name: pop3
              protocol: TCP
              containerPort: 110
              hostPort: 110
            - name: pop3s
              protocol: TCP
              containerPort: 995
              hostPort: 995
            - name: imap
              protocol: TCP
              containerPort: 143
              hostPort: 143
            - name: imaps
              protocol: TCP
              containerPort: 993
              hostPort: 993
            - name: smtp
              protocol: TCP
              containerPort: 25
              hostPort: 25
            - name: smtps
              protocol: TCP
              containerPort: 465
              hostPort: 465
            - name: smtp-auth
              protocol: TCP
              containerPort: 10025
            - name: imap-auth
              protocol: TCP
              containerPort: 10143
            - name: smtpd
              protocol: TCP
              containerPort: 587
              hostPort: 587
            - name: auth
              containerPort: 8000
              protocol: TCP
            - name: http
              containerPort: 80
              protocol: TCP
            
          resources:
            limits: {}
            requests: {}
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /health
              port: http
          readinessProbe:
            failureThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            httpGet:
              path: /health
              port: http
      volumes:
        - name: certs
          secret:
            items:
              - key: tls.crt
                path: cert.pem
              - key: tls.key
                path: key.pem
            secretName: mailu-certificates
