yaml/0.3.3/mailu/mailu/templates/front/ingress.yaml
---
# Source: mailu/templates/front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailu
  namespace: "mailu"
  labels:
    app.kubernetes.io/name: mailu
    helm.sh/chart: mailu-0.3.3
    app.kubernetes.io/instance: mailu
    app.kubernetes.io/managed-by: Helm
spec:
  tls:
  - secretName: mailu-certificates
    hosts:
    - "mail.example.com"
    - "imap.example.com"
  rules:
    - host: "mail.example.com"
      http:
        paths:
        - path: "/"
          backend:
            service:
              name: mailu-front
              port:
                number: 80
          pathType: ImplementationSpecific
    - host: "imap.example.com"
      http:
        paths:
        - path: "/"
          backend:
            service:
              name: mailu-front
              port:
                number: 80
          pathType: ImplementationSpecific
